--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/jpeg" href="njv logo.jpeg"
-  <title> NJV Fee Voucher Generator</title>
+  <link rel="icon" type ="image/jpeg" href="njv logo.jpeg"/>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     
-
   <div class="container">
     <div class="header">
         <img src="njv logo.jpeg" alt="NJV HIGHER SECONDARY SCHOOL KARACHI" class="logo">
