--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <label for="bank-address">Bank Address:</label>
         <select id="bank-address">
             <option value="">Select a Branch</option>
-            <option value="HBL Clifton Branch, Karachi (Ref: 001)">HBL Clifton Branch, Karachi (Ref: 001)</option>
+                        <option value="HBL Clifton Branch, Karachi (Ref: 001)">HBL Clifton Branch, Karachi (Ref: 001)</option>
             <option value="HBL Saddar Branch, Karachi (Ref: 002)">HBL Saddar Branch, Karachi (Ref: 002)</option>
             <option value="HBL Tariq Road Branch, Karachi (Ref: 003)">HBL Tariq Road Branch, Karachi (Ref: 003)</option>
             <option value="HBL Gulshan-e-Iqbal Branch, Karachi (Ref: 004)">HBL Gulshan-e-Iqbal Branch, Karachi (Ref: 004)</option>
@@ -52,6 +52,82 @@
             <option value="HBL University Road Branch, Karachi (Ref: 008)">HBL University Road Branch, Karachi (Ref: 008)</option>
             <option value="HBL Sharah-e-Faisal Branch, Karachi (Ref: 009)">HBL Sharah-e-Faisal Branch, Karachi (Ref: 009)</option>
             <option value="HBL Jinnah Terminal Branch, Karachi (Ref: 010)">HBL Jinnah Terminal Branch, Karachi (Ref: 010)</option>
+            <option value="HBL PECHS Branch, Karachi (Ref: 011)">HBL PECHS Branch, Karachi (Ref: 011)</option>
+            <option value="HBL Nazimabad Branch, Karachi (Ref: 012)">HBL Nazimabad Branch, Karachi (Ref: 012)</option>
+            <option value="HBL Garden Branch, Karachi (Ref: 013)">HBL Garden Branch, Karachi (Ref: 013)</option>
+            <option value="HBL Landhi Branch, Karachi (Ref: 014)">HBL Landhi Branch, Karachi (Ref: 014)</option>
+            <option value="HBL Malir Branch, Karachi (Ref: 015)">HBL Malir Branch, Karachi (Ref: 015)</option>
+            <option value="HBL Liaquatabad Branch, Karachi (Ref: 016)">HBL Liaquatabad Branch, Karachi (Ref: 016)</option>
+            <option value="HBL Shahrah-e-Noor Jehan Branch, Karachi (Ref: 017)">HBL Shahrah-e-Noor Jehan Branch, Karachi (Ref: 017)</option>
+            <option value="HBL Federal B Area Branch, Karachi (Ref: 018)">HBL Federal B Area Branch, Karachi (Ref: 018)</option>
+            <option value="HBL Karimabad Branch, Karachi (Ref: 019)">HBL Karimabad Branch, Karachi (Ref: 019)</option>
+            <option value="HBL Super Highway Branch, Karachi (Ref: 020)">HBL Super Highway Branch, Karachi (Ref: 020)</option>
+            <option value="HBL Hub River Road Branch, Karachi (Ref: 021)">HBL Hub River Road Branch, Karachi (Ref: 021)</option>
+            <option value="HBL Industrial Area Branch, Karachi (Ref: 022)">HBL Industrial Area Branch, Karachi (Ref: 022)</option>
+            <option value="HBL SITE Area Branch, Karachi (Ref: 023)">HBL SITE Area Branch, Karachi (Ref: 023)</option>
+            <option value="HBL Orangi Town Branch, Karachi (Ref: 024)">HBL Orangi Town Branch, Karachi (Ref: 024)</option>
+            <option value="HBL Baldia Town Branch, Karachi (Ref: 025)">HBL Baldia Town Branch, Karachi (Ref: 025)</option>
+            <option value="HBL Manzoor Colony Branch, Karachi (Ref: 026)">HBL Manzoor Colony Branch, Karachi (Ref: 026)</option>
+            <option value="HBL Kharadar Branch, Karachi (Ref: 027)">HBL Kharadar Branch, Karachi (Ref: 027)</option>
+            <option value="HBL Gulberg Branch, Karachi (Ref: 028)">HBL Gulberg Branch, Karachi (Ref: 028)</option>
+            <option value="HBL DHA Phase V Branch, Karachi (Ref: 029)">HBL DHA Phase V Branch, Karachi (Ref: 029)</option>
+            <option value="HBL Saddar Cooperative Market Branch, Karachi (Ref: 030)">HBL Saddar Cooperative Market Branch, Karachi (Ref: 030)</option>
+            <option value="HBL Hyderi Branch, Karachi (Ref: 031)">HBL Hyderi Branch, Karachi (Ref: 031)</option>
+<option value="HBL Clifton Cantonment Branch, Karachi (Ref: 032)">HBL Clifton Cantonment Branch, Karachi (Ref: 032)</option>
+<option value="HBL Jamshed Road Branch, Karachi (Ref: 033)">HBL Jamshed Road Branch, Karachi (Ref: 033)</option>
+<option value="HBL Karsaz Branch, Karachi (Ref: 034)">HBL Karsaz Branch, Karachi (Ref: 034)</option>
+<option value="HBL Teen Talwar Branch, Karachi (Ref: 035)">HBL Teen Talwar Branch, Karachi (Ref: 035)</option>
+<option value="HBL Clifton Block 5 Branch, Karachi (Ref: 036)">HBL Clifton Block 5 Branch, Karachi (Ref: 036)</option>
+<option value="HBL Boat Basin Branch, Karachi (Ref: 037)">HBL Boat Basin Branch, Karachi (Ref: 037)</option>
+<option value="HBL Shahrah-e-Quaideen Branch, Karachi (Ref: 038)">HBL Shahrah-e-Quaideen Branch, Karachi (Ref: 038)</option>
+<option value="HBL Khayaban-e-Shahbaz Branch, Karachi (Ref: 039)">HBL Khayaban-e-Shahbaz Branch, Karachi (Ref: 039)</option>
+<option value="HBL Khayaban-e-Ittehad Branch, Karachi (Ref: 040)">HBL Khayaban-e-Ittehad Branch, Karachi (Ref: 040)</option>
+<option value="HBL I.I. Chundrigar Road Branch, Karachi (Ref: 041)">HBL I.I. Chundrigar Road Branch, Karachi (Ref: 041)</option>
+<option value="HBL Shah Faisal Colony Branch, Karachi (Ref: 042)">HBL Shah Faisal Colony Branch, Karachi (Ref: 042)</option>
+<option value="HBL Sohrab Goth Branch, Karachi (Ref: 043)">HBL Sohrab Goth Branch, Karachi (Ref: 043)</option>
+<option value="HBL Clifton Block 2 Branch, Karachi (Ref: 044)">HBL Clifton Block 2 Branch, Karachi (Ref: 044)</option>
+<option value="HBL Gizri Branch, Karachi (Ref: 045)">HBL Gizri Branch, Karachi (Ref: 045)</option>
+<option value="HBL Metroville Branch, Karachi (Ref: 046)">HBL Metroville Branch, Karachi (Ref: 046)</option>
+<option value="HBL DHA Phase II Branch, Karachi (Ref: 047)">HBL DHA Phase II Branch, Karachi (Ref: 047)</option>
+<option value="HBL DHA Phase IV Branch, Karachi (Ref: 048)">HBL DHA Phase IV Branch, Karachi (Ref: 048)</option>
+<option value="HBL DHA Phase VI Branch, Karachi (Ref: 049)">HBL DHA Phase VI Branch, Karachi (Ref: 049)</option>
+<option value="HBL Saddar Regal Branch, Karachi (Ref: 050)">HBL Saddar Regal Branch, Karachi (Ref: 050)</option>
+<option value="HBL Shahrah-e-Usman Branch, Karachi (Ref: 051)">HBL Shahrah-e-Usman Branch, Karachi (Ref: 051)</option>
+<option value="HBL Airport Branch, Karachi (Ref: 052)">HBL Airport Branch, Karachi (Ref: 052)</option>
+<option value="HBL NIPA Branch, Karachi (Ref: 053)">HBL NIPA Branch, Karachi (Ref: 053)</option>
+<option value="HBL KDA Scheme 1 Branch, Karachi (Ref: 054)">HBL KDA Scheme 1 Branch, Karachi (Ref: 054)</option>
+<option value="HBL Mehmoodabad Branch, Karachi (Ref: 055)">HBL Mehmoodabad Branch, Karachi (Ref: 055)</option>
+<option value="HBL Kala Pul Branch, Karachi (Ref: 056)">HBL Kala Pul Branch, Karachi (Ref: 056)</option>
+<option value="HBL Buffer Zone Branch, Karachi (Ref: 057)">HBL Buffer Zone Branch, Karachi (Ref: 057)</option>
+<option value="HBL Golimar Branch, Karachi (Ref: 058)">HBL Golimar Branch, Karachi (Ref: 058)</option>
+<option value="HBL Mauripur Branch, Karachi (Ref: 059)">HBL Mauripur Branch, Karachi (Ref: 059)</option>
+<option value="HBL Super Market Branch, Karachi (Ref: 060)">HBL Super Market Branch, Karachi (Ref: 060)</option>
+<option value="HBL Clifton Branch, Karachi (Ref: 061)">HBL Clifton Branch, Karachi (Ref: 061)</option>
+<option value="HBL Saddar Branch, Karachi (Ref: 062)">HBL Saddar Branch, Karachi (Ref: 062)</option>
+<option value="HBL Korangi Branch, Karachi (Ref: 063)">HBL Korangi Branch, Karachi (Ref: 063)</option>
+<option value="HBL Gulshan-e-Iqbal Branch, Karachi (Ref: 064)">HBL Gulshan-e-Iqbal Branch, Karachi (Ref: 064)</option>
+<option value="HBL North Nazimabad Branch, Karachi (Ref: 065)">HBL North Nazimabad Branch, Karachi (Ref: 065)</option>
+<option value="HBL Saddar Branch, Hyderabad (Ref: 066)">HBL Saddar Branch, Hyderabad (Ref: 066)</option>
+<option value="HBL Auto Bhan Road Branch, Hyderabad (Ref: 067)">HBL Auto Bhan Road Branch, Hyderabad (Ref: 067)</option>
+<option value="HBL Latifabad Branch, Hyderabad (Ref: 068)">HBL Latifabad Branch, Hyderabad (Ref: 068)</option>
+<option value="HBL Qasimabad Branch, Hyderabad (Ref: 069)">HBL Qasimabad Branch, Hyderabad (Ref: 069)</option>
+<option value="HBL Civil Lines Branch, Hyderabad (Ref: 070)">HBL Civil Lines Branch, Hyderabad (Ref: 070)</option>
+<option value="HBL Barrage Road Branch, Sukkur (Ref: 071)">HBL Barrage Road Branch, Sukkur (Ref: 071)</option>
+<option value="HBL Shikarpur Road Branch, Sukkur (Ref: 072)">HBL Shikarpur Road Branch, Sukkur (Ref: 072)</option>
+<option value="HBL Minara Road Branch, Sukkur (Ref: 073)">HBL Minara Road Branch, Sukkur (Ref: 073)</option>
+<option value="HBL Station Road Branch, Sukkur (Ref: 074)">HBL Station Road Branch, Sukkur (Ref: 074)</option>
+<option value="HBL Rohri Branch, Sukkur (Ref: 075)">HBL Rohri Branch, Sukkur (Ref: 075)</option>
+<option value="HBL Jinnah Bagh Branch, Larkana (Ref: 076)">HBL Jinnah Bagh Branch, Larkana (Ref: 076)</option>
+<option value="HBL Bunder Road Branch, Larkana (Ref: 077)">HBL Bunder Road Branch, Larkana (Ref: 077)</option>
+<option value="HBL Resham Gali Branch, Larkana (Ref: 078)">HBL Resham Gali Branch, Larkana (Ref: 078)</option>
+<option value="HBL Naudero Branch, Larkana (Ref: 079)">HBL Naudero Branch, Larkana (Ref: 079)</option>
+<option value="HBL Ratodero Branch, Larkana (Ref: 080)">HBL Ratodero Branch, Larkana (Ref: 080)</option>
+<option value="HBL Mirpurkhas Branch, Mirpurkhas (Ref: 081)">HBL Mirpurkhas Branch, Mirpurkhas (Ref: 081)</option>
+<option value="HBL Satellite Town Branch, Mirpurkhas (Ref: 082)">HBL Satellite Town Branch, Mirpurkhas (Ref: 082)</option>
+<option value="HBL Digri Branch, Mirpurkhas (Ref: 083)">HBL Digri Branch, Mirpurkhas (Ref: 083)</option>
+<option value="HBL Jhuddo Branch, Mirpurkhas (Ref: 084)">HBL Jhuddo Branch, Mirpurkhas (Ref: 084)</option>
+<option value="HBL Kot Ghulam Muhammad Branch, Mirpurkhas (Ref: 085)">HBL Kot Ghulam Muhammad Branch, Mirpurkhas (Ref: 085)</option>
+
         </select>
     </div>
       <div class="form-group">
